--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,7 @@ header #toggle:after {
     width: 100%;
     min-height: 100vh;
     padding: 100px;
-    background: url(../images/bg.jpg);
+    background: url(./images/bg.jpg);
     background-size: cover;
     display: flex;
     align-items: center;
